--- a/app/views/loads/_form.html.erb
+++ b/app/views/loads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@load) do |f| %>
+<%= form_for(@load, html: {id: 'load-form'}) do |f| %>
   <% if @load.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@load.errors.count, "error") %> prohibited this load from being saved:</h2>
@@ -10,7 +10,18 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" v-model="load.origin" name="load[origin]" placeholder="Origin">
+    </div>
+  </div>
+  <!-- <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+    </div>
+  </div> -->
   <div class="actions">
     <%= f.submit %>
   </div>
