--- a/app/views/loads/index.html.erb
+++ b/app/views/loads/index.html.erb
@@ -25,17 +25,7 @@
             </thead>
 
             <tbody>
-                <tr v-for="load in loads">
-                  <td>{{ load.origin }}</td>
-                  <td>{{ load.destination }}</td>
-                  <td>{{ load.pick_up_at }} </td>
-                  <td>{{ load.delivery_at }}</td>
-                  <td>{{ load.equipment_type }}</td>
-                  <td>{{ load.load_type }}</td>
-                  <td>{{ load.weight }}</td>
-                  <td>{{ load.price }}</td>
-                  <td>{{ load.tel }}</td>
-                </tr>
+              <tr is="load-row" v-for="load in loads" :load="load"></tr>
             </tbody>
           </table>
         </div><!-- /.box-body -->
@@ -43,6 +33,19 @@
     </div><!-- /.col -->
   </div><!-- /.row -->
 </section><!-- /.content -->
+<script type="text/x-template" id="load-row">
+  <tr>
+    <td>{{ load.origin }}</td>
+    <td>{{ load.destination }}</td>
+    <td>{{ load.pick_up_at }} </td>
+    <td>{{ load.delivery_at }}</td>
+    <td>{{ load.equipment_type }}</td>
+    <td>{{ load.load_type }}</td>
+    <td>{{ load.weight }}</td>
+    <td>{{ load.price }}</td>
+    <td>{{ load.tel }}</td>
+  </tr>
+</script>
 <script type="text/javascript">
   $(document).on('ready page:change', function() {
     var load_table = new Vue({
@@ -60,25 +63,15 @@
           });
         }
     });
+
+    Vue.component('load-row', {
+      template: '#load-row',
+      props: {
+        load: Object
+      }
+    });
   });
 
-  Vue.component('load-row', {
-    template: '#load-row',
-    props: {
-      load: Object
-    }
-  });
+  
 </script>
-<script type="text/x-template" id="load-row">
-  <tr>
-    <td>{{ load.origin }}</td>
-    <td>{{ load.destination }}</td>
-    <td>{{ load.pick_up_at }} </td>
-    <td>{{ load.delivery_at }}</td>
-    <td>{{ load.equipment_type) }}</td>
-    <td>{{ load.load_type) }}</td>
-    <td>{{ load.weight }}</td>
-    <td>{{ load.price }}</td>
-    <td>{{ load.tel }}</td>
-  </tr>
-</script>
+
